--- a/scss/_container.scss
+++ b/scss/_container.scss
@@ -15,6 +15,7 @@ main{
                         margin: 20px;   
                         text-align: center;
                         justify-content: center;
+                        color: black;
                         fieldset{
                             border-radius: 4px;
                             border: solid 3px #999;
