--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -86,7 +86,7 @@
                 .column3{
                     max-width: 400px;
                     font-size: 16px;
-                    color: #666,
+                    color: black,
                 } 
                 .row2 {
                     margin-top: 20px;
