--- a/css/estilo.css
+++ b/css/estilo.css
@@ -174,30 +174,29 @@ main div div div .h1A {
   main div div div .h1A else {
     color: black; }
 
-main div div div div form {
+main div div div form {
   display: flex;
   width: 350px;
   background: rgba(255, 255, 255, 0.719);
   padding: 20px;
   border-radius: 4px;
-  margin: 20px;
   text-align: center;
   justify-content: center;
   color: black; }
-  main div div div div form fieldset {
+  main div div div form fieldset {
     border-radius: 4px;
     border: solid 3px #999; }
-    main div div div div form fieldset div .field {
+    main div div div form fieldset div .field {
       border: solid 1px black;
       padding: 10px;
       width: 210px;
       border-radius: 4px; }
-    main div div div div form fieldset div .fieldMoneda {
+    main div div div form fieldset div .fieldMoneda {
       border: solid 1px black;
       padding: 10px;
       width: 70px;
       font-size: 12px; }
-    main div div div div form fieldset div .boton, main div div div div form fieldset div .botonR {
+    main div div div form fieldset div .boton, main div div div form fieldset div .botonR {
       display: inline-flex;
       align-items: center;
       justify-content: center;
@@ -212,10 +211,8 @@ main div div div div form {
       cursor: pointer;
       text-transform: uppercase;
       transition: .3s ease all;
-      border-radius: 5px;
-      position: relative;
-      overflow: hidden; }
-      main div div div div form fieldset div .boton:hover, main div div div div form fieldset div .botonR:hover {
+      border-radius: 5px; }
+      main div div div form fieldset div .boton:hover, main div div div form fieldset div .botonR:hover {
         background: #f6d76d; }
 
 main div div div .containerForm {
@@ -246,26 +243,27 @@ main div .containerForm {
   justify-content: space-between;
   align-items: center; }
 
-main div div div .formC {
+main div div .formC {
   display: flex;
   width: 350px;
+  height: 520px;
   background: rgba(255, 255, 255, 0.719);
   padding: 20px;
   border-radius: 4px;
   margin: 20px;
   text-align: center;
   justify-content: center; }
-  main div div div .formC fieldset div input {
+  main div div .formC fieldset div input {
     width: 300px; }
-  main div div div .formC fieldset div textarea {
+  main div div .formC fieldset div textarea {
     width: 300px; }
 
-main div div div form {
+main div div form {
   justify-content: left; }
-  main div div div form .fieldset .fieldC {
+  main div div form .fieldset .fieldC {
     text-align: left;
     width: 700px; }
-  main div div div form .fieldset inputFc {
+  main div div form .fieldset inputFc {
     display: flex;
     width: 500px; }
 
@@ -287,9 +285,7 @@ main div div .boton, main div div .botonR {
   cursor: pointer;
   text-transform: uppercase;
   transition: .3s ease all;
-  border-radius: 5px;
-  position: relative;
-  overflow: hidden; }
+  border-radius: 5px; }
   main div div .boton:hover, main div div .botonR:hover {
     background: #f6d76d; }
 
@@ -341,29 +337,12 @@ main .seccionOcho {
   background-size: cover;
   padding: 20px; }
 
-main div .seccionQuince {
-  width: 100%;
-  height: 100%;
-  background-image: url(../img/contactanos-moneyontime.png);
-  background-size: cover;
-  padding: 20px; }
-
-main div .seccionQuince {
-  width: 100%;
-  height: 680px; }
-
-main div .seccionQuince .seccionDieciseis {
-  display: flex;
-  justify-content: space-between; }
-
 main div .seccionOnce {
   justify-content: center; }
   main div .seccionOnce .botonAyuda {
     background-color: #cc9a37;
     color: white;
     border-radius: 5px; }
-  main div .seccionOnce .imgAyuda {
-    border-radius: 10px; }
 
 main div .seccionDoce {
   justify-content: center; }
@@ -379,15 +358,6 @@ main div .seccionTrece {
 
 main div .seccionCatorce {
   justify-content: center; }
-
-main div .seccionQuince {
-  justify-content: center; }
-  main div .seccionQuince .botonAyuda {
-    background-color: #cc9a37;
-    color: white;
-    border-radius: 5px; }
-  main div .seccionQuince .imgAyuda {
-    border-radius: 10px; }
 
 @media (min-width: 994px) {
   main div .seccionUno {
@@ -441,28 +411,36 @@ main div .seccionQuince {
     justify-content: center;
     width: auto; }
     main div .containerForm .containerS {
-      width: auto; } }
+      width: auto; }
+  main div .seccionQuince {
+    width: 100%;
+    height: 680px;
+    background-image: url(../img/contactanos-moneyontime.png);
+    background-size: cover;
+    padding: 20px;
+    display: flex;
+    justify-content: right;
+    margin-right: 40px; }
+    main div .seccionQuince .botonAyuda {
+      background-color: #cc9a37;
+      color: white;
+      border-radius: 5px; }
+    main div .seccionQuince .imgAyuda {
+      border-radius: 10px; } }
 
 @media (max-width: 858px) {
   main .seccionUno {
-    width: auto;
-    height: 100%;
+    width: 100%;
+    height: 750px;
     background-image: url(../img/moneyontime-banner.png);
     background-size: cover;
     padding: 20px;
     align-items: center;
     justify-content: center; }
-  main .seccionUno {
-    width: auto;
-    height: 700px;
-    align-items: center;
-    justify-content: center; }
-  main div .formSection1 {
-    margin-left: 65px; }
   main div div div .h1A {
     margin-left: auto;
-    width: 450px;
-    height: 100px;
+    width: auto;
+    height: 150px;
     background: rgba(255, 255, 255, 0.719);
     border-radius: 4px;
     text-align: center;
@@ -504,9 +482,7 @@ main div .seccionQuince {
         cursor: pointer;
         text-transform: uppercase;
         transition: .3s ease all;
-        border-radius: 5px;
-        position: relative;
-        overflow: hidden; }
+        border-radius: 5px; }
         main div div div div form fieldset div .boton:hover, main div div div div form fieldset div .botonR:hover {
           background: #f6d76d; }
   main div div .seccionUnoA {
@@ -528,12 +504,13 @@ main div .seccionQuince {
     display: block;
     align-items: center;
     justify-content: center;
-    width: auto; }
+    width: 414px; }
   main div div div .seccionCuatro1 {
     display: block;
     align-items: center;
     justify-content: center;
-    width: auto; }
+    width: auto;
+    margin-left: 5px; }
   main .seccionSeis {
     width: auto;
     height: 100%;
@@ -565,39 +542,33 @@ main div .seccionQuince {
     align-items: center;
     justify-content: center;
     width: auto; }
+  main div div .seccionOnce div .imgNosotros {
+    width: 300px;
+    border-radius: 10px;
+    margin-left: -20px; }
   main div div div .imgAyuda {
-    width: 300px; }
+    width: 300px;
+    margin-left: -45px; }
   main div div .containerForm {
     align-items: center;
     justify-content: center;
     width: auto; }
     main div div .containerForm .containerS {
       width: auto; }
-  main div {
-    display: block; }
-    main div .seccionQuince {
-      width: auto;
-      height: 100%;
-      background-image: url(../img/contactanos-moneyontime-m.png);
-      background-size: cover;
-      padding: 20px;
-      align-items: center;
-      justify-content: center;
-      display: block; }
-    main div div .seccionDieciseis {
-      width: auto;
-      height: 100%;
-      background-size: cover;
-      padding: 20px;
-      align-items: center;
-      justify-content: center;
-      display: block;
-      margin-left: 65px; }
-    main div div .h1AC {
-      display: none; }
-    main div div .formC {
-      width: auto;
-      height: auto; } }
+  main .seccionQuince {
+    width: 100%;
+    height: 560px;
+    padding: 10px;
+    background-image: url(../img/contactanos-moneyontime-m.png);
+    background-size: cover;
+    display: flex;
+    justify-content: center; }
+    main .seccionQuince .botonAyuda {
+      background-color: #cc9a37;
+      color: white;
+      border-radius: 5px; }
+    main .seccionQuince .imgAyuda {
+      border-radius: 10px; } }
 
 .seccionTres {
   background-color: #655d59;
@@ -620,9 +591,7 @@ main div div .boton, main div div .botonR {
   cursor: pointer;
   text-transform: uppercase;
   transition: .3s ease all;
-  border-radius: 5px;
-  position: relative;
-  overflow: hidden; }
+  border-radius: 5px; }
   main div div .boton:hover, main div div .botonR:hover {
     background: #f6d76d; }
 
