--- a/css/estilo.css
+++ b/css/estilo.css
@@ -512,9 +512,9 @@ main div .seccionCatorce {
     width: auto;
     margin-left: 5px; }
   main .seccionSeis {
-    width: auto;
-    height: 100%;
-    background-image: url(../img/envio-de-dinero-empresas.png);
+    width: 100%;
+    height: 200px;
+    background-image: url(../img/envio-de-dinero-empresas-m.png);
     background-size: cover;
     padding: 20px;
     align-items: center;
