--- a/scss/_container.scss
+++ b/scss/_container.scss
@@ -469,9 +469,9 @@ main{
             }
         }
         .seccionSeis{
-            width: auto;
-            height: 100%;
-            background-image: url(../img/envio-de-dinero-empresas.png);
+            width: 100%;
+            height: 200px;
+            background-image: url(../img/envio-de-dinero-empresas-m.png);
             background-size: cover;
             padding: 20px;
             align-items: center;
