--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -235,6 +235,9 @@
               font-size: 0.3cm;
               color: black;
             }  
+            h3{
+              font-size: 0.3cm;
+            }
       }
   }
 }
