--- a/css/estilo.css
+++ b/css/estilo.css
@@ -433,7 +433,7 @@ main div div div h3 {
 @media (max-width: 858px) {
   main .seccionUno {
     width: 100%;
-    height: 750px;
+    height: 800px;
     background-image: url(../img/moneyontime-banner.png);
     background-size: cover;
     padding: 20px;
@@ -729,7 +729,9 @@ main div div .botonR {
     padding: 40px;
     justify-content: space-between;
     font-size: 0.3cm;
-    color: black; } }
+    color: black; }
+  div div h3 {
+    font-size: 0.3cm; } }
 
 @media (max-width: 952px) {
   div div .container-footer1 {
